[project]
name = "mazemdp"
description = "An simple maze to test dynamic programming and tabular reinforcement learning algorithms"
authors = [
    {name = "Olivier Sigaud", email = "Olivier.Sigaud@isir.upmc.fr"},
    {name = "Benjamin Piwowarski", email = "benjamin.piwowarski@cnrs.fr"},
]
dependencies = [
    "numpy", 
    "matplotlib",
    "ipyreact"
]
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/osigaud/SimpleMazeMDP"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/mazemdp/_version.py"