[metadata]
# This includes the license file in the wheel.
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[pytype]
inputs = mazemdp

[options]
include_package_data = True

[flake8]
ignore = W503,W504,E203,E231  # line breaks before and after binary operators
# Ignore import not used when aliases are defined
per-file-ignores =
	./mazemdp/__init__.py:F401
	./mazemdp/maze_plotter.py:E402, F821
exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    # Don't check the doc
    docs/
    # This contains our built documentation
    build,
    # This contains builds of flake8 that we don't want to check
    dist
		*.egg-info
max-complexity = 15
# The GitHub editor is 127 chars wide
max-line-length = 127

[isort]
profile = black
line_length = 127
src_paths = mazemdp
